{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "d3694145-82f2-c22a-d9f8-242e847920a8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "power_BI_NI",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/networkInterfaces/power_BI_NI",
            "internal_domain_name_suffix": "ps3qckocd1xezprx1jnclfravd.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/virtualNetworks/power_BI_VNET/subnets/power_BI_SNET"
              }
            ],
            "location": "ukwest",
            "mac_address": "60-45-BD-0D-3C-1A",
            "name": "power_BI_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "power_bi_RG",
            "virtual_machine_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Compute/virtualMachines/power-bi-vm"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.power_bi_RG",
            "azurerm_subnet.power_BI_SNET",
            "azurerm_virtual_network.power_BI_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "power_bi_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/networkSecurityGroups/power_bi_SG",
            "location": "ukwest",
            "name": "power_bi_SG",
            "resource_group_name": "power_bi_RG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.power_bi_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_RDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/networkSecurityGroups/power_bi_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "power_bi_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "power_bi_RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.power_bi_SG",
            "azurerm_resource_group.power_bi_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_public_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.142.164.112",
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vm_public_IP",
            "resource_group_name": "power_bi_RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.power_bi_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "power_BI_SNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/virtualNetworks/power_BI_VNET/subnets/power_BI_SNET",
            "name": "power_BI_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "power_bi_RG",
            "virtual_network_name": "power_BI_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.power_bi_RG",
            "azurerm_virtual_network.power_BI_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "power_BI_VNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2901bb7c-1ec2-4cee-be37-da5a259620ab",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/virtualNetworks/power_BI_VNET",
            "location": "ukwest",
            "name": "power_BI_VNET",
            "resource_group_name": "power_bi_RG",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/power_bi_RG/providers/Microsoft.Network/virtualNetworks/power_BI_VNET/subnets/power_BI_SNET",
                "name": "power_BI_SNET"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.power_bi_RG"
          ]
        }
      ]
    }
  ]
}